--- a/FixMyRideApp/app/build.gradle
+++ b/FixMyRideApp/app/build.gradle
@@ -36,9 +36,12 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.firebase.database
+    implementation libs.recyclerview
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
     implementation platform(libs.firebase.bom)
     implementation(libs.firebase.auth)
+    implementation libs.okhttp
+
 }
