--- a/FixMyRideApp/app/src/main/AndroidManifest.xml
+++ b/FixMyRideApp/app/src/main/AndroidManifest.xml
@@ -1,12 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
     <!-- Add permissions for Camera and External Storage Access -->
-    <uses-permission android:name="android.permission.CAMERA"
+    <permission
+        android:name="${applicationId}.permission.CAMERA"
+        android:label="Camera Permission"
+        android:protectionLevel="normal" />
+
+    <uses-permission
+        android:name="android.permission.CAMERA"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="32"
         tools:ignore="ScopedStorage" />
 
@@ -20,11 +28,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FixMyRideApp"
         tools:targetApi="31">
-
-        <!-- Add FileProvider configuration to support camera file sharing -->
+        <activity
+            android:name=".ReportGenerationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ReportActivity"
+            android:exported="false" /> <!-- Add FileProvider configuration to support camera file sharing -->
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="${applicationId}.fileprovider"
+            android:authorities="com.example.fixmyrideapp.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
@@ -48,8 +60,10 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
