--- a/FixMyRideApp/gradle/libs.versions.toml
+++ b/FixMyRideApp/gradle/libs.versions.toml
@@ -9,6 +9,8 @@ material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
 firebaseDatabase = "21.0.0"
+okhttp = "4.11.0"
+recyclerview = "1.3.2"
 
 [libraries]
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
@@ -21,6 +23,8 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
