--- a/FixMyRideApp/app/src/main/AndroidManifest.xml
+++ b/FixMyRideApp/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
         android:label="Camera Permission"
         android:protectionLevel="normal" />
 
+    <uses-permission android:name="android.permission.INTERNET"
+                     android:usesCleartextTraffic="true"/>
+
     <uses-permission
         android:name="android.permission.CAMERA"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
@@ -27,6 +30,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FixMyRideApp"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
         <activity
             android:name=".ReportGenerationActivity"
