--- a/FixMyRideApp/app/build.gradle
+++ b/FixMyRideApp/app/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     implementation platform(libs.firebase.bom)
     implementation(libs.firebase.auth)
     implementation libs.okhttp
-
+    def room_version = "2.5.0"
+    implementation libs.room.runtime
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
