--- a/FixMyRideApp/gradle/libs.versions.toml
+++ b/FixMyRideApp/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ constraintlayout = "2.2.0"
 firebaseDatabase = "21.0.0"
 okhttp = "4.11.0"
 recyclerview = "1.3.2"
+roomRuntime = "2.5.0"
 
 [libraries]
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
@@ -25,6 +26,7 @@ constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayo
 firebase-database = { group = "com.google.firebase", name = "firebase-database", version.ref = "firebaseDatabase" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
