--- a/FixMyRideApp/app/build.gradle
+++ b/FixMyRideApp/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     def room_version = "2.5.2"
     implementation libs.room.runtime
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation libs.threetenabp
 }
