--- a/FixMyRideApp/gradle/libs.versions.toml
+++ b/FixMyRideApp/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ firebaseDatabase = "21.0.0"
 okhttp = "4.11.0"
 recyclerview = "1.3.2"
 roomRuntime = "2.5.0"
+threetenabp = "1.4.0"
 
 [libraries]
 firebase-auth = { module = "com.google.firebase:firebase-auth" }
@@ -27,6 +28,7 @@ firebase-database = { group = "com.google.firebase", name = "firebase-database",
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
 room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+threetenabp = { module = "com.jakewharton.threetenabp:threetenabp", version.ref = "threetenabp" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
