--- a/FixMyRideApp/app/build.gradle
+++ b/FixMyRideApp/app/build.gradle
@@ -30,7 +30,6 @@ android {
 }
 
 dependencies {
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
@@ -47,4 +46,6 @@ dependencies {
     implementation libs.room.runtime
     annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation libs.threetenabp
+    implementation libs.lifecycle.viewmodel
+    implementation libs.lifecycle.livedata
 }
