--- a/FixMyRideApp/app/src/main/AndroidManifest.xml
+++ b/FixMyRideApp/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:label="Camera Permission"
         android:protectionLevel="normal" />
 
-    <uses-permission android:name="android.permission.INTERNET"
-                     android:usesCleartextTraffic="true"/>
-
+    <uses-permission
+        android:name="android.permission.INTERNET"
+        android:usesCleartextTraffic="true" />
     <uses-permission
         android:name="android.permission.CAMERA"
         tools:ignore="PermissionImpliesUnsupportedChromeOsHardware" />
@@ -22,17 +22,20 @@
         tools:ignore="ScopedStorage" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FixMyRideApp"
-        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".ReportHistoryActivity"
+            android:exported="false" />
         <activity
             android:name=".ReportGenerationActivity"
             android:exported="false" />
